--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
 .App {
   text-align: center;
+  margin-top:60px;
+}
+.colorRed{
+  color:red;
+}
+.CounterWrapper{
+  width: 300px;
+  height: 200px;
+  border: 3px solid deepskyblue;
+  margin: 20px auto 0 auto;
+  border-radius: 5px;
+  font-size: 30px;
+  background: blueviolet;
+}
+.counter{
+  border: 1px solid #000000;
+  margin: 20px;
+  padding: 30px;
+  background: deepskyblue;
+  border-radius: 5px;
+}
+.Button{
+  background-color: deepskyblue;
+  border: none;
+  padding: 10px 30px;
+  margin: 10px 30px;
+  font-size:15px;
+  border-radius: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title{
+  font-size: 45px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
