--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 .App {
-  text-align: center;
-  margin-top:60px;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-position: center;
+  background-size: cover;
 }
-.colorRed{
-  color:red;
-}
+
 .CounterWrapper{
   width: 300px;
   height: 200px;
