--- a/src/components/Counter/Counter.module.css
+++ b/src/components/Counter/Counter.module.css
@@ -1,11 +1,20 @@
 .counterWrapper{
     width: 300px;
-    height: 200px;
+    height: 250px;
     border: 3px solid deepskyblue;
     margin: 20px auto 0 auto;
     border-radius: 5px;
-    font-size: 30px;
+    font-size: 50px;
     background: forestgreen;
+    text-align: center;
+}
+.screen {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    margin: 20px;
 }
 .maximum {
     color: red;
