--- a/src/components/SettingCounter/Settings.module.css
+++ b/src/components/SettingCounter/Settings.module.css
@@ -1,12 +1,14 @@
 .counterWrapper{
+    display: flex;
+    justify-content: center;
     width: 300px;
-    height: 200px;
+    height: 250px;
     border: 3px solid deepskyblue;
     margin: 20px auto 0 auto;
     border-radius: 5px;
-    font-size: 30px;
     background: blueviolet;
 }
+
 .screen {
     display: flex;
     flex-direction: column;
@@ -16,12 +18,10 @@
     width: 200px;
     height: 250px;
     margin: 20px;
-    padding: 10px;
 }
 .buttons {
     display: flex;
     justify-content: space-around;
-    border: 3px solid #ae5c6a;
     margin: 20px;
     padding: 10px;
 }
